[package]
name = "examples"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Alekay <>"]

[[example]]
name = "01"
path = "01.rs"

[[example]]
name = "02"
path = "02.rs"

[[example]]
name = "03"
path = "03.rs"

[[example]]
name = "04"
path = "04.rs"

[dev-dependencies]
sentinel-io = { version = "0.0.1", path = "../sentinel-io" }
tokio = { version = "1.52.2", features = ["full"] }
