[package]
name = "examples"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Alekay <>"]

[[example]]
name = "basic"
path = "basic.rs"

[[example]]
name = "mem_leak"
path = "mem_leak.rs"

[[example]]
name = "tcp_echo"
path = "tcp_echo.rs"

[dev-dependencies]
sentinel-io = { version = "0.0.1", path = "../sentinel-io" }
