[package]
name = "examples"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Alekay <>"]

[[example]]
name = "basic"
path = "basic.rs"

[[example]]
name = "mem_leak"
path = "mem_leak.rs"

[[example]]
name = "tcp_echo"
path = "tcp_echo.rs"

[[example]]
name = "tcp_echo_split"
path = "tcp_echo_split.rs"

[[example]]
name = "echo_server"
path = "echo_server.rs"

[dev-dependencies]
sentinel-io = { version = "0.1.0", path = "../sentinel-io" }
